Added future project and going to refactor web component project

--- a/projects/index.html
+++ b/projects/index.html
@@ -45,6 +45,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-clipboard">JS Clipboard</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-drag-and-drop">JS Drag and Drop</a>
               </td>
             </tr>
