--- a/projects/js-web-components/index.html
+++ b/projects/js-web-components/index.html
@@ -16,6 +16,8 @@
   <body>
     <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
+    <div id="yellow-banner">WORK IN PROGRESS</div>
+
     <main hidden>
       <a href="/projects">Back to Projects List</a>
 
