--- a/projects/js-web-components/index.html
+++ b/projects/js-web-components/index.html
@@ -24,7 +24,7 @@
       <h1>JS Web Components</h1>
 
       <p>
-        This project (<b>JS Web Components</b>) is an exploratory space designed for me, Chris Bilger, to learn about
+        This project (<b>JS Web Components</b>) is an exploratory space designed for me to learn about
         <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components" target="_blank" class="external-link"
           >JavaScript Web Components</a
         >. These have been on my radar for months and months by the time of this projects creation; however, I didn't think much of them
@@ -51,130 +51,52 @@
       // Arlo is not used in this project because this project is used for
       // exploring JavaScript Web Components
 
-      import { LitElement, html, css } from "https://unpkg.com/@polymer/lit-element@latest/lit-element.js?module";
-
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
 
-        const privateOpen = Symbol("open");
-
-        class OneDialog extends LitElement {
-          static get properties() {
-            return {
-              open: { type: Boolean, attribute: "open", reflect: true },
-            };
-          }
-
-          static get styles() {
-            return [
-              css`
-                .wrapper {
-                  opacity: 0;
-                  transition: visibility 0s, opacity 0.25s ease-in;
-                }
-                .wrapper:not(.open) {
-                  visibility: hidden;
-                }
-                .wrapper.open {
-                  align-items: center;
-                  display: flex;
-                  justify-content: center;
-                  height: 100vh;
-                  position: fixed;
-                  top: 0;
-                  left: 0;
-                  right: 0;
-                  bottom: 0;
-                  opacity: 1;
-                  visibility: visible;
-                }
-                .overlay {
-                  background: rgba(0, 0, 0, 0.8);
-                  height: 100%;
-                  position: fixed;
-                  top: 0;
-                  right: 0;
-                  bottom: 0;
-                  left: 0;
-                  width: 100%;
-                }
-                .dialog {
-                  background: #ffffff;
-                  max-width: 600px;
-                  padding: 1rem;
-                  position: fixed;
-                }
-                button {
-                  all: unset;
-                  cursor: pointer;
-                  font-size: 1.25rem;
-                  position: absolute;
-                  top: 1rem;
-                  right: 1rem;
-                }
-                button:focus {
-                  border: 2px solid blue;
-                }
-              `,
-            ];
-          }
-
-          firstUpdated() {
-            this._watchEscape = this._watchEscape.bind(this);
-          }
-
+        class TimeFormatted extends HTMLElement {
           render() {
-            return html` <div class="wrapper ${this.open ? "open" : ""}" aria-hidden="${!this.open}">
-              <div class="overlay" @click="${this.close}"></div>
-              <div class="dialog" role="dialog" aria-labelledby="title" aria-describedby="content">
-                <button class="close" aria-label="Close" @click=${this.close}>✖️</button>
-                <h1 id="title"><slot name="heading"></slot></h1>
-                <div id="content" class="content">
-                  <slot></slot>
-                </div>
-              </div>
-            </div>`;
+            // (1)
+            let date = new Date(this.getAttribute("datetime") || Date.now());
+
+            this.innerHTML = new Intl.DateTimeFormat("default", {
+              year: this.getAttribute("year") || undefined,
+              month: this.getAttribute("month") || undefined,
+              day: this.getAttribute("day") || undefined,
+              hour: this.getAttribute("hour") || undefined,
+              minute: this.getAttribute("minute") || undefined,
+              second: this.getAttribute("second") || undefined,
+              timeZoneName: this.getAttribute("time-zone-name") || undefined,
+            }).format(date);
           }
 
-          get open() {
-            return this[privateOpen];
-          }
-          set open(isOpen) {
-            this[privateOpen] = isOpen;
-            const { shadowRoot } = this;
-            const { activeElement } = document;
-            if (isOpen) {
-              setTimeout(() => shadowRoot.querySelector("button").focus());
-              if (activeElement) {
-                this._wasFocused = activeElement;
-              }
-              document.addEventListener("keydown", this._watchEscape);
-            } else {
-              this._wasFocused && this._wasFocused.focus && this._wasFocused.focus();
-              document.removeEventListener("keydown", this._watchEscape);
+          connectedCallback() {
+            // (2)
+            if (!this.rendered) {
+              this.render();
+              this.rendered = true;
             }
           }
 
-          close() {
-            this.open = false;
-            const closeEvent = new CustomEvent("dialog-closed");
-            this.dispatchEvent(closeEvent);
+          static get observedAttributes() {
+            // (3)
+            return ["datetime", "year", "month", "day", "hour", "minute", "second", "time-zone-name"];
           }
 
-          _watchEscape(event) {
-            if (event.key === "Escape") {
-              this.close();
-            }
+          attributeChangedCallback(name, oldValue, newValue) {
+            // (4)
+            this.render();
           }
         }
 
-        customElements.define("one-dialog", OneDialog);
-
-        const button = document.getElementById("launch-dialog");
-        button.addEventListener("click", () => {
-          document.querySelector("one-dialog").open = true;
-        });
+        customElements.define("time-formatted", TimeFormatted);
       })();
+    </script>
+
+    <time-formatted id="elem" hour="numeric" minute="numeric" second="numeric"></time-formatted>
+
+    <script>
+      setInterval(() => elem.setAttribute("datetime", new Date()), 1000); // (5)
     </script>
   </body>
 </html>
