Initial ChatGPT updates

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         <hr />
 
         <p>
-          Hello and welcome to my portfolio page! I'm Chris Bilger and I am a husband, father, engineer, educator, and leader. I currently
-          work as a Software Engineer at Lockheed Martin where I design, build, test, and deploy full-stack applications for various
-          enterprises.
+          Welcome to my portfolio website. I am Chris Bilger, a software engineer with a multifaceted background including engineering,
+          education, and leadership. I am currently employed at Lockheed Martin, where I bring my expertise in full-stack application
+          development to the design, build, testing, and deployment of enterprise solutions.
         </p>
 
         <p>
-          I am extremely passionate about continuous learning, teaching, discovering, and building in all facets of my life. From my
-          professional career in software engineering to my personal life and hobbies, I want to learn something new every day, and share
-          that new knowledge with others. I curated a long-term roadmap for creating tools to help make people's lives better, easier,
-          safer, more efficient, etc.
+          I am dedicated to a continuous process of learning, teaching, discovery, and creation across all aspects of my life. I strive to
+          expand my knowledge on a daily basis, both within my professional career and in my personal pursuits and hobbies. I am committed
+          to sharing my newfound insights with others. I have established a long-term plan for developing tools aimed at enhancing people's
+          lives through increased efficiency, safety, and ease.
         </p>
       </section>
 
@@ -77,13 +77,14 @@
           >
 
           <details>
-            <summary>Roles and Responsibilities</summary>
+            <summary>Etc:</summary>
 
-            <ul>
+            <ol>
               <li>
                 Product owner and software engineer for the Oasis Base
                 development team
               </li>
+
               <li>
                 Product owner and software engineer on an
                 <abbr title="Internal Research and Development">IRAD</abbr>
@@ -91,7 +92,7 @@
                 <abbr title="Lockheed Martin Corporation">enterprise</abbr>
                 offering of APICurio Registry & APICurio Studio
               </li>
-            </ul>
+            </ol>
           </details>
         </aside> -->
 
@@ -102,32 +103,40 @@
           <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
 
           <details>
-            <summary>Roles and Responsibilities</summary>
+            <summary>Among my notable accomplishments are:</summary>
 
-            <ul>
-              <li>Software engineer on the Oasis Base development team</li>
+            <ol>
               <li>
-                Primary software engineer on an
-                <abbr title="Internal Research and Development">IRAD</abbr>
-                effort to build out an
-                <abbr title="Lockheed Martin Corporation">enterprise</abbr>
-                offering of APICurio Registry & APICurio Studio
+                As a software engineer on the Oasis Base development team, I have been actively involved in the design, development, and
+                deployment of software solutions.
               </li>
+
               <li>
-                Member of architecture team overseeing the design of new functionality for Oasis
-                <abbr title="United States Navy Baseline">USN BL</abbr> 9.2.3
+                I took the lead role in the IRAD effort to build out an enterprise offering of APICurio Registry & APICurio Studio,
+                utilizing my skills and experience to ensure the success of this project.
               </li>
-              <li>New Hire Mentor for 2 new employees</li>
-            </ul>
+
+              <li>
+                As a member of the architecture team, I have contributed to the design of new functionality for Oasis USN BL 9.2.3,
+                utilizing my expertise in software engineering to provide insights and recommendations.
+              </li>
+
+              <li>
+                I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the organization.
+              </li>
+            </ol>
           </details>
         </aside>
 
         <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
-          <p>November 2022 - January 2023</p>
+          <p>October 2022 - January 2023</p>
 
-          Time spent taking care of my fiancé post-partum and bonding with our newborn baby.
+          <p>
+            Period of parental leave dedicated to supporting my partner during the postpartum period and fostering a strong connection with
+            our newly-born child.
+          </p>
         </aside>
 
         <aside>
@@ -135,23 +144,31 @@
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
           <code>Internal Position: <b>Associate Member of Engineering Staff (L1)</b></code>
-          <details>
-            <summary>Roles and Responsibilities</summary>
 
-            <ul>
-              <li>Software engineer on the Oasis Base development team</li>
+          <details>
+            <summary>Some of my key achievements include:</summary>
+
+            <ol>
               <li>
-                Software engineer working with the
-                <abbr title="Synthetic Combat Operator Trainer; Republic of Korea">SCOT K2</abbr>
-                development team; traveled to the Republic of Korea
+                Contributed as a software engineer to the Oasis Base development team, leveraging my technical proficiency and teamwork
+                skills to deliver high-quality software solutions.
               </li>
+
               <li>
-                Primary software engineer on an
-                <abbr title="Internal Research and Development">IRAD</abbr>
-                effort to modernize Oasis Base 3rd-party API integration
+                Collaborated with the SCOT K2 development team, traveling to the Republic of Korea to support on-site software development
+                efforts.
               </li>
-              <li>New Hire Mentor for 2 new employees</li>
-            </ul>
+
+              <li>
+                Served as the primary software engineer on an IRAD project aimed at modernizing Oasis Base 3rd-party API integration,
+                demonstrating my ability to manage complex software development projects and my expertise in API integration.
+              </li>
+
+              <li>
+                Mentored two new employees as a New Hire Mentor, imparting my knowledge and experience to help them quickly integrate into
+                the organization and build a strong foundation in their roles.
+              </li>
+            </ol>
           </details>
         </aside>
       </section>
@@ -167,42 +184,25 @@
           <h3>Master of Computer Science (M.C.S.)</h3>
           <p>Arizona State University</p>
           <p>August 2020 - August 2022</p>
-          <p>
-            My master's studies revolved around full-stack application development, security, stability, and scalability.
-            <br />
-            <br />
-            <code>This degree has a concentration in <b>Cybersecurity</b>.</code>
-          </p>
+          <code>This degree has a concentration in <b>Cybersecurity</b>.</code>
         </aside>
 
         <aside>
           <h3>Bachelor of Science: Computer Science</h3>
           <p>Temple University</p>
           <p>August 2018 - May 2020</p>
-          <p>
-            By completing my B.S. at Temple University I have gained the skills and knowledge required to advance in the field of computer
-            science and software engineering.
-          </p>
         </aside>
 
         <aside>
           <h3>Associate of Science: Mathematics</h3>
           <p>Bucks County Community College</p>
           <p>August 2018 - August 2019</p>
-          <p>
-            I was able to complete this degree on top of my coursework at Temple University by finishing the courses at Bucks County
-            Community College during the off-semesters at Temple University.
-          </p>
         </aside>
 
         <aside>
           <h3>Associate of Science: Computer Science</h3>
           <p>Bucks County Community College</p>
           <p>August 2015 - May 2018</p>
-          <p>
-            Bucks County Community College allowed me to work while completing my associates degree. This was crucial in allowing me to
-            graduate and move on to Temple University.
-          </p>
         </aside>
       </section>
 
@@ -263,27 +263,27 @@
         <hr />
 
         <p>
-          I have extensive experience working on fast-paced, high-output Agile teams using both Scrum and Kanban methodologies. From
-          self-hosted GitLab instances running CI/CD pipelines to full Atlassian suite production environments, I have the skillset and
-          know-how to architecture, plan, and implement such complex, dynamic systems.
+          I have a proven track record of working on high-output Agile teams using both Scrum and Kanban methodologies. My experience
+          encompasses self-hosted GitLab instances and full Atlassian suite production environments, and I have the technical skills
+          required to plan, implement, and maintain complex and dynamic systems.
         </p>
 
         <p>
-          Being a full-stack software engineer gives me the express responsibility to keep up-to-date with the latest trends in frontend,
-          middleware, and backend web development technologies. I've worked professionally with the following tech stacks: MERN, MEVN,
-          Django, Java Springboot, AWS, Azure, and many others.
+          As a full-stack software engineer, I have a responsibility to remain current with the latest trends in frontend, middleware, and
+          backend web development technologies. I have professional experience working with a variety of tech stacks, including MERN, MEVN,
+          Django, Java Springboot, AWS, and Azure, among others.
         </p>
 
         <p>
-          I am most proficient with React and Vue as frontend frameworks, Express JS as middleware, and both NodeJS and Django on the
-          backend. As far as databases go, all types of SQL and NoSQL databases are within my abilities.
+          I have a strong proficiency in React and Vue as frontend frameworks, Express JS as middleware, and NodeJS and Django on the
+          backend. My database expertise encompasses both SQL and NoSQL databases.
         </p>
 
         <p>
-          I have experience in many areas of software engineering and I'm constantly learning new frameworks, methodologies, tech stacks,
-          development workflows, and processes. I put an extremely high emphasis on well-written and thought-out code as well as code that
-          is documented, linted, formatted, style checked, etc. I truly believe that if you're going to do something (in this case software
-          engineering), do it right the first time.
+          I continuously expand my knowledge and skills in various areas of software engineering, including frameworks, methodologies, tech
+          stacks, development workflows, and processes. I place a high emphasis on producing well-written, thought-out code and ensure that
+          my code is properly documented, linted, formatted, and style checked. I am committed to consistently delivering high-quality
+          software engineering solutions.
         </p>
       </section>
 
