Final updates and resume reupload

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank" class="external-link">LinkedIn</a>
             </li>
             <li>
-              <a href="./Christopher-Bilger-Resume-January-2023.pdf" target="_blank" class="external-link">Resume</a>
+              <a href="./Christopher-Bilger-Resume-February-2023.pdf" target="_blank" class="external-link">Resume</a>
             </li>
             <li>
               <a href="mailto:christopherbilg@gmail.com" target="_blank" class="external-link">Email</a>
@@ -66,35 +66,6 @@
         <hr id="professional-experience" />
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
-
-        <!-- <aside>
-          <h3>Senior Software Engineer</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <code
-            >Internal Position:
-            <b>Senior Member of Engineering Staff (L3)</b></code
-          >
-
-          <details>
-            <summary>Etc:</summary>
-
-            <ol>
-              <li>
-                Product owner and software engineer for the Oasis Base
-                development team
-              </li>
-
-              <li>
-                Product owner and software engineer on an
-                <abbr title="Internal Research and Development">IRAD</abbr>
-                effort to build out an
-                <abbr title="Lockheed Martin Corporation">enterprise</abbr>
-                offering of APICurio Registry & APICurio Studio
-              </li>
-            </ol>
-          </details>
-        </aside> -->
 
         <aside>
           <h3>Software Engineer</h3>
@@ -134,8 +105,8 @@
           <p>October 2022 - January 2023</p>
 
           <p>
-            Period of parental leave dedicated to supporting my partner during the postpartum period and fostering a strong connection with
-            our newly-born child.
+            A 12-week period of parental leave dedicated to supporting my partner during the postpartum period and fostering a strong bond
+            with our newly-born child.
           </p>
         </aside>
 
@@ -295,31 +266,11 @@
         <hr />
 
         <!-- <p>
-          <b class="certification-title"
-            >Lockheed Martin: Lead Software Engineer Development Qualification
-            Program</b
-          >
-          <br />
-          This program seeks to identify people across the organization (Rotary
-          and Mission Systems) that are qualified and on track to practice as
-          technical leaders on proposals and programs, providing incentive for
-          technical professionals to grow their skills and expertise in leading
-          technical teams.
-          <br />
-          <em class="certification-date"
-            ><b>INSERT DATE OBTAINED</b> - Forever</em
-          >
-        </p> -->
-
-        <!-- <p>
           <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
           <br />
-          A series of training seminars (16 total hours) for up-and-coming lead
-          engineers at Lockheed Martin.
+          A series of training seminars (16 total hours) for up-and-coming lead engineers at Lockheed Martin.
           <br />
-          <em class="certification-date"
-            ><b>INSERT DATE OBTAINED</b> - Forever</em
-          >
+          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
         </p> -->
 
         <p>
@@ -337,8 +288,8 @@
         <p>
           <b class="certification-title">LinkedIn Learning: Master the OWASP Top 10</b>
           <br />
-          LinkedIn Learning course for mastering the OWASP Top 10, which
-          <q cite="https://owasp.org/www-project-top-ten/">is a standard awareness document for developers and web application security.</q>
+          LinkedIn Learning course for mastering the OWASP Top 10, which An online course offered by LinkedIn Learning to achieve
+          proficiency in the OWASP Top 10, a widely accepted guide for web application security in the developer world.
           <br />
           <em class="certification-date">August 2022 - Forever</em>
         </p>
