Added typewriter effect

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -15,7 +15,10 @@
 
   <body>
     <header>
-      <h1>Chris Bilger, M.C.S. | GPG Keys</h1>
+      <div class="typewriter">
+        <h1>Chris Bilger, M.C.S. | GPG Keys</h1>
+      </div>
+
       <img
         id="header-image"
         alt="Image of an enigma machine sitting in a display case"
