--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
   <body>
     <header>
-      <h1>Chris Bilger, M.C.S. | Portfolio</h1>
+      <div class="typewriter">
+        <h1>Chris Bilger, M.C.S. | Portfolio</h1>
+      </div>
+
       <img id="header-image" alt="Image of Chris Bilger" src="./images/profile.avif" width="320" height="200.53" />
 
       <section>
