--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,10 @@
 
   <body>
     <header>
-      <h1>Chris Bilger, M.C.S. | Projects</h1>
+      <div class="typewriter">
+        <h1>Chris Bilger, M.C.S. | Projects</h1>
+      </div>
+
       <img
         id="header-image"
         alt="Image of a programmer with CSS code on the wall behind him"
