Made the inline padding for block 'ol' smaller

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -16,7 +16,8 @@
   <body>
     <header>
       <div class="typewriter">
-        <h1>Chris Bilger, M.C.S. | GPG Keys</h1>
+        <h1>Chris Bilger, M.C.S.</h1>
+        <h2>GPG Keys</h2>
       </div>
 
       <img
