--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,8 @@
   <body>
     <header>
       <div class="typewriter">
-        <h1>Chris Bilger, M.C.S. | Projects</h1>
+        <h1>Chris Bilger, M.C.S.</h1>
+        <h2>Projects</h2>
       </div>
 
       <img
