--- a/gpg/index.html
+++ b/gpg/index.html
@@ -16,8 +16,7 @@
   <body>
     <header>
       <div class="typewriter">
-        <h1>Chris Bilger, M.C.S.</h1>
-        <h2>GPG Keys</h2>
+        <h1>Chris Bilger, M.C.S. | GPG Keys</h1>
       </div>
 
       <img
