--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <body>
     <header>
       <div class="typewriter">
-        <h1>Chris Bilger, M.C.S.</h1>
-        <h2>Portfolio</h2>
+        <h1>Chris Bilger, M.C.S. | Portfolio</h1>
       </div>
 
       <img id="header-image" alt="Image of Chris Bilger" src="./images/profile.avif" width="320" height="200.53" />
