--- a/projects/js-web-components/index.html
+++ b/projects/js-web-components/index.html
@@ -17,8 +17,7 @@
     <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <script type="module">
-      // Arlo is not used in this project because this project is used for
-      // exploring JavaScript Web Components
+      // Arlo is not used in this project because this project is used for exploring JavaScript Web Components
 
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
