Commented out two roles, as they haven't (yet) been sufficient for my liking

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
                 utilizing my expertise in software engineering to provide insights and recommendations.
               </li>
 
+              <!-- <li>I provided assistance to LM Aero in facilitating a collaborative IRAD initiative between Oasis and <b>BMDS?</b>.</li> -->
+
               <li>
                 I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the organization.
               </li>
