--- a/gpg-keys/index.html
+++ b/gpg-keys/index.html
@@ -22,7 +22,7 @@
       <img
         id="header-image"
         alt="Image of an enigma machine sitting in a display case"
-        src="../images/gpg.avif"
+        src="../images/gpg-keys.avif"
         width="320"
         height="213.33"
       />
