--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="mailto:christopherbilg@gmail.com" target="_blank" class="external-link">Email</a>
             </li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/gpg">GPG Keys</a></li>
+            <li><a href="/gpg-keys">GPG Keys</a></li>
           </ul>
         </nav>
       </section>
@@ -69,6 +69,21 @@
         <hr id="professional-experience" />
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
+
+        <!-- <aside>
+          <h3>Senior Software Engineer</h3>
+          <p class="COMPANY-NAME">COMPANY NAME</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <code>ADDITIONAL INFO</code>
+
+          <details>
+            <summary>A number of my memorable successes are:</summary>
+
+            <ol>
+              <li>...</li>
+            </ol>
+          </details>
+        </aside> -->
 
         <aside>
           <h3>Software Engineer</h3>
@@ -269,6 +284,14 @@
         <hr id="certifications" />
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
+
+        <!-- <p>
+          <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
+          <br />
+          An intensive training series of 16 hours, aimed at developing lead engineers at Lockheed Martin.
+          <br />
+          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+        </p> -->
 
         <p>
           <b class="certification-title">LinkedIn Learning: Become a Thought Leader</b>
