Added far-future parental leave

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
           </details>
         </aside> -->
 
+        <!-- <aside>
+          <h3>Paternity Leave</h3>
+          <p class="family-medical-leave">Family and Medical Leave</p>
+          <p><b>MONTH</b> 2024 - <b>MONTH</b> 2024</p>
+
+          <p>
+            A 12-week parental leave focused on supporting my spouse during the postpartum phase and fostering a close relationship with our
+            recently born child.
+          </p>
+        </aside> -->
+
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
