Added future project ideas, fun stuff ahead

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,6 +46,18 @@
 
         <table id="link-table">
           <tbody>
+            <tr hidden>
+              <td>
+                <a href="/projects/pokeapi-graphql">PokeAPI - GraphQL</a>
+              </td>
+            </tr>
+
+            <tr hidden>
+              <td>
+                <a href="/projects/nasa-open-apis">NASA Open APIs</a>
+              </td>
+            </tr>
+
             <tr>
               <td>
                 <a href="/projects/js-clipboard">JS Clipboard</a>
