--- a/projects/nasa-open-apis/index.html
+++ b/projects/nasa-open-apis/index.html
@@ -16,8 +16,6 @@
   <body>
     <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
-    <div id="yellow-banner">WORK IN PROGRESS</div>
-
     <main hidden>
       <a href="/projects">Back to Projects List</a>
 
@@ -52,6 +50,104 @@
 
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
+
+        class App extends StyledComponent {
+          init() {
+            // The following API key is meant to be kept private so please don't misuse it :)
+            // Let this be a lesson in trust. If it is misused, I'll replace it with the demo API key.
+            this.API_KEY = "RWspdWL8MLyvu6IKEelXos8zAFBRj7Mnmtx7nuMY";
+            this.DEMO_API_KEY = "DEMO_KEY";
+
+            this.response = {};
+            fetch(`https://api.nasa.gov/planetary/apod?api_key=${this.API_KEY}`)
+              .then((res) => res.json())
+              .then((data) => {
+                this.response = data;
+                this.render();
+              })
+              .catch(() => {});
+          }
+
+          styles() {
+            return css`
+              hr {
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+              }
+
+              p {
+                color: rgb(136, 6, 6);
+
+                span {
+                  color: black;
+                }
+              }
+
+              img {
+                width: 100%;
+              }
+            `;
+          }
+
+          compose() {
+            return vdom`
+              <div>
+                <hr />
+
+                <h2>${this.response.hdurl ? "Astronomy Picture of the Day" : "URL unavailable, blocked, and/or API key error."}</h2>
+
+                ${
+                  this.response.title
+                    ? vdom`
+                      <p>
+                        <span>Photograph Title:</span>
+                        ${this.response.title}
+                      </p>
+                    `
+                    : vdom``
+                }
+
+                ${
+                  this.response.copyright
+                    ? vdom`
+                      <p>
+                        <span>Copyright:</span>
+                        ${this.response.copyright}
+                      </p>
+                    `
+                    : vdom``
+                }
+
+                ${
+                  this.response.date
+                    ? vdom`
+                      <p>
+                        <span>Photograph Date:</span>
+                        ${this.response.date}
+                      </p>
+                    `
+                    : vdom``
+                }
+
+                ${
+                  this.response.explanation
+                    ? vdom`
+                      <p>
+                        <span>Description:</span>
+                        ${this.response.explanation}
+                      </p>
+                    `
+                    : vdom``
+                }
+
+                <img src="${this.response.hdurl || ""}" alt="${this.response.title || ""}" />
+              </div>
+            `;
+          }
+        }
+
+        const app = new App();
+        document.getElementsByTagName("main")[0].appendChild(app.node);
       })();
     </script>
   </body>
