--- a/projects/pokeapi-graphql/index.html
+++ b/projects/pokeapi-graphql/index.html
@@ -16,17 +16,14 @@
   <body>
     <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
-    <div id="yellow-banner">WORK IN PROGRESS</div>
-
     <main hidden>
       <a href="/projects">Back to Projects List</a>
 
       <h1>PokeAPI - GraphQL</h1>
 
       <p>
-        The <b>PokeAPI</b> is a RESTful API (and soon-to-be GraphQL API) that provides access to information about the Pokémon universe,
-        including Pokémon species, abilities, moves, and more. It was created as a project by the community for the community and is open
-        for anyone to use.
+        The <b>PokeAPI</b> is a GraphQL API that provides access to information about the Pokémon universe, including Pokémon species,
+        abilities, moves, and more. It was created as a project by the community for the community and is open for anyone to use.
       </p>
 
       <p>
@@ -47,7 +44,7 @@
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
 
-        class App extends Component {
+        class App extends StyledComponent {
           init() {
             this.response = { data: {} };
             fetch("https://beta.pokeapi.co/graphql/v1beta", {
@@ -56,10 +53,10 @@
                 "Content-Type": "application/json",
               },
               body: JSON.stringify({
-                query: `query QUERY_NAME {
-                  pokemon_v2_ability {
-                    id,
+                query: `query myCustomQuery {
+                  gen3_species: pokemon_v2_pokemonspecies(order_by: { id: asc }) {
                     name
+                    id
                   }
                 }`,
               }),
@@ -72,10 +69,52 @@
               .catch(() => {});
           }
 
+          capitalizeFirstLetter(string) {
+            return string.charAt(0).toUpperCase() + string.slice(1);
+          }
+
+          styles() {
+            return css`
+              div {
+                border: 1px solid black;
+                display: inline-block;
+                width: 110px;
+                margin: 0.5rem;
+
+                p {
+                  text-align: center;
+                }
+
+                img {
+                  width: 96px;
+                  margin-left: 7px;
+                  margin-right: 7px;
+                }
+              }
+            `;
+          }
+
           compose() {
             return vdom`
-              <pre>${JSON.stringify(this.response, undefined, 2)}</pre>
-            `;
+                    <div>
+                      ${
+                        this.response.data.gen3_species
+                          ? this.response.data.gen3_species.map((data) => {
+                              return vdom`
+                                <div>
+                                  <p>${this.capitalizeFirstLetter(data.name)}</p>
+                                  <img
+                                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${data.id}.png"
+                                    alt="${data.name}"
+                                    loading="lazy"
+                                  />
+                                </div>
+                              `;
+                            })
+                          : ""
+                      }
+                    </div>
+                  `;
           }
         }
 
