Added a future certification

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
               </li>
 
               <li>
+                <!-- Keep? -->
                 As a member of the architecture team, I have contributed to the design of new functionality for Oasis USN BL 9.2.3,
                 utilizing my expertise in software engineering to provide insights and recommendations.
               </li>
@@ -300,6 +301,16 @@
           <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
           <br />
           An intensive training series of 16 hours, aimed at developing lead engineers at Lockheed Martin.
+          <br />
+          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-title">udemy: NLP - Natural Language Processing with Python</b>
+          <br />
+          "NLP - Natural Language Processing with Python" is a comprehensive course on natural language processing (NLP) using the Python
+          programming language. The course is designed to provide a solid understanding of NLP concepts and techniques, as well as practical
+          experience with using Python libraries such as NLTK, spaCy, and scikit-learn to build NLP applications.
           <br />
           <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
         </p> -->
