--- a/index.html
+++ b/index.html
@@ -85,17 +85,6 @@
           </details>
         </aside> -->
 
-        <!-- <aside>
-          <h3>Paternity Leave</h3>
-          <p class="family-medical-leave">Family and Medical Leave</p>
-          <p><b>MONTH</b> 2024 - <b>MONTH</b> 2024</p>
-
-          <p>
-            A 12-week parental leave focused on supporting my spouse during the postpartum phase and fostering a close relationship with our
-            recently born child.
-          </p>
-        </aside> -->
-
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
@@ -117,12 +106,14 @@
               </li>
 
               <li>
-                <!-- Keep? -->
                 As a member of the architecture team, I have contributed to the design of new functionality for Oasis USN BL 9.2.3,
                 utilizing my expertise in software engineering to provide insights and recommendations.
               </li>
 
-              <!-- <li>I provided assistance to LM Aero in facilitating a collaborative IRAD initiative between Oasis and <b>BMDS?</b>.</li> -->
+              <!-- <li>
+                I provided assistance to LM Aero in facilitating a collaborative IRAD initiative between Oasis and the Unites States Air
+                Force.
+              </li> -->
 
               <li>
                 I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the organization.
@@ -301,16 +292,6 @@
           <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
           <br />
           An intensive training series of 16 hours, aimed at developing lead engineers at Lockheed Martin.
-          <br />
-          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
-        </p> -->
-
-        <!-- <p>
-          <b class="certification-title">udemy: NLP - Natural Language Processing with Python</b>
-          <br />
-          "NLP - Natural Language Processing with Python" is a comprehensive course on natural language processing (NLP) using the Python
-          programming language. The course is designed to provide a solid understanding of NLP concepts and techniques, as well as practical
-          experience with using Python libraries such as NLTK, spaCy, and scikit-learn to build NLP applications.
           <br />
           <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
         </p> -->
