Finished PokeAPI GraphQL project (cleaned it up)

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               </li>
 
               <!-- <li>
-                I provided assistance to LM Aero in facilitating a collaborative IRAD initiative between Oasis and the Unites States Air
-                Force.
+                I provided assistance to LM Aeronautics in the form of a collaborative IRAD initiative between Oasis and the Unites States
+                Air Force.
               </li> -->
 
               <li>
