Guess I wasn't finished with the project

--- a/projects/pokeapi-graphql/index.html
+++ b/projects/pokeapi-graphql/index.html
@@ -110,6 +110,7 @@
                               return vdom`
                                 <div>
                                   <p>${this.capitalizeFirstLetter(data.name)}</p>
+                                  <p>${data.id}</p>
                                   <img
                                     src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${data.id}.png"
                                     alt="${data.name}"
