Cleaned up commented out HTML

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                 utilizing my expertise in software engineering to provide insights and recommendations.
               </li>
 
-              <!-- <li>
-                I provided assistance to LM Aeronautics in the form of a collaborative IRAD initiative between Oasis and the Unites States
-                Air Force.
-              </li> -->
+              <li>
+                I provided technical support to LM Aeronautics for a collaborative IRAD initiative between Oasis and the Unites States Air
+                Force (STITCHES).
+              </li>
 
               <li>
                 I have served as a New Hire Mentor, guiding and supporting two new employees as they transition into the organization.
@@ -287,14 +287,6 @@
         <hr id="certifications" />
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
-
-        <!-- <p>
-          <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
-          <br />
-          An intensive training series of 16 hours, aimed at developing lead engineers at Lockheed Martin.
-          <br />
-          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
-        </p> -->
 
         <p>
           <b class="certification-title">LinkedIn Learning: Become a Thought Leader</b>
