Cleaned up IIFE-wrapped IIFE

--- a/index.html
+++ b/index.html
@@ -344,17 +344,17 @@
           <tbody>
             <tr>
               <td>Running</td>
-              <td>Card Games</td>
+              <td>Traveling</td>
               <td>Engineering</td>
             </tr>
             <tr>
               <td>Kayaking</td>
-              <td>Board Games</td>
+              <td>Card Games</td>
               <td>Research</td>
             </tr>
             <tr>
               <td>Biking</td>
-              <td>Puzzles</td>
+              <td>Board Games</td>
               <td>Teaching</td>
             </tr>
           </tbody>
