--- a/projects/browser-cryptography/index.html
+++ b/projects/browser-cryptography/index.html
@@ -66,7 +66,7 @@
           return new TextDecoder().decode(decrypted);
         };
 
-        const test = async () => {
+        (async () => {
           const unencrypted = `
             (() => {
               class App extends Component {
@@ -109,9 +109,7 @@
           const decrypted = await decryptPayload(key, iv, encrypted);
 
           eval(decrypted);
-        };
-
-        test();
+        })();
       })();
     </script>
   </body>
