--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
               </li>
 
               <li>
-                As a member of the architecture team, I have contributed to the design of new functionality for Oasis USN BL 9.2.3,
-                utilizing my expertise in software engineering to provide insights and recommendations.
+                As a member of the architecture team, I have contributed to the design of many new features, RFIs, RFPs, and future IRADs.
               </li>
 
               <li>
