--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
         <hr />
 
         <!-- <aside>
+          <h3>Paternity Leave</h3>
+          <p class="family-medical-leave">Family and Medical Leave</p>
+          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
+
+          <p>I took a 12-week parental leave to aid my partner in her postpartum period and bond with our newborn baby.</p>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="COMPANY-NAME">COMPANY NAME</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
@@ -83,6 +91,14 @@
               <li>...</li>
             </ol>
           </details>
+        </aside> -->
+
+        <!-- <aside>
+          <h3>Founder & Owner</h3>
+          <p class="soma-notes">Soma Notes, LLC.</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+
+          <a href="https://somanotes.com/" target="_blank" class="external-link">Soma Notes</a>
         </aside> -->
 
         <aside>
