Added initial template code for SaaS Login Page

--- a/projects/saas-login-page/index.html
+++ b/projects/saas-login-page/index.html
@@ -13,6 +13,21 @@
   </head>
 
   <body>
-    <div id="placeholder"></div>
+    <div id="card">
+      <h1>Login to SaaS Website</h1>
+
+      <form>
+        <label for="username">Username</label>
+        <input type="text" placeholder="Username" name="username" required />
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" name="password" required />
+
+        <button type="submit">Login</button>
+      </form>
+
+      <a href="#">Don't have an account?</a>
+      <a href="#">Forgot your password?</a>
+    </div>
   </body>
 </html>
