Added potential future professional experience

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
           </details>
         </aside> -->
 
+        <!-- <aside>
+          <h3>Founder & Owner</h3>
+          <p class="COMPANY-NAME">COMPANY NAME</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+
+          <a href="#" target="_blank" class="external-link">WEBSITE</a>
+        </aside> -->
+
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
