--- a/index.html
+++ b/index.html
@@ -303,6 +303,24 @@
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
 
+        <!-- <p>
+          <b class="certification-title">Lockheed Martin: Lead Software Engineer Development Qualification Program</b>
+          <br />
+          This program seeks to identify people across the organization (Rotary and Mission Systems) that are qualified and on track to
+          practice as technical leaders on proposals and programs, providing incentive for technical professionals to grow their skills and
+          expertise in leading technical teams.
+          <br />
+          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
+          <br />
+          A series of training seminars (16 total hours) for up-and-coming lead engineers at Lockheed Martin.
+          <br />
+          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+        </p> -->
+
         <p>
           <b class="certification-title">LinkedIn Learning: Become a Thought Leader</b>
           <br />
